--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       --border:#e5e7eb;
       --text:#111827;
       --muted:#6b7280;
-      --accent:#3b82f6;      /* 平日用チップ色 */
+      --accent:#afafaf;      /* 平日用チップ色 */
       --accent-sat:#0ea5e9;  /* 土曜 */
       --accent-sun:#ef4444;  /* 日曜 */
       --bg:#ffffff;
@@ -23,12 +23,12 @@
     /* --- Month & Day: 数字を大きく、"月"/"日"は小さく --- */
     .md{display:flex; align-items:flex-end; justify-content:center; gap:4px}
     .month,.day{display:flex; align-items:baseline; gap:2px}
-    .month .num{font-size:28px; font-weight:800; letter-spacing:.02em}
-    .day   .num{font-size:56px; font-weight:900; line-height:1}
+    .month .num{font-size:72px; font-weight:800; line-height:1}
+    .day   .num{font-size:72px; font-weight:800; line-height:1}
     .unit{font-size:12px; color:var(--muted); line-height:1}
 
     .chip{display:flex; align-items:center; justify-content:center; gap:6px;
-      font-size:14px; color:#fff; border-radius:999px; width:30px; height:30px;}
+      font-size:20px; color:#fff; border-radius:999px; width:50px; height:50px;}
     .chip.weekday{ background: var(--accent); }
     .chip.sat{     background: var(--accent-sat); }
     .chip.sun{     background: var(--accent-sun); }
